# new-parking-map

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: run-update.yml
Data Pipeline/: Rack Overlap.ipynb  analysis_rack_overlap.ipynb  data_pipeline.py  downstream.py  open_toronto_ca_sources.json  open_toronto_ca_statuses.json  openstreetmap_sources.json  openstreetmap_statuses.json  test_bike_lockers.py  wrappers.py
Data Pipeline/city_modifications/: exclusion_template.json  open_toronto_ca_exclusions.json
Data Pipeline/conversions/: __init__.py  _bicycle_parking_bike_stations_indoor.py  _bicycle_parking_high_capacity_outdoor.py  _bicycle_parking_racks.py  _osm_bicycle_parking_city_of_toronto.py  _street_furniture_bicycle_parking.py  _template.py  _toronto_lockers.py
Data Pipeline/custom_types/: __init__.py  geojson_types.py  geojson_types.pyi
Data Pipeline/sources/: openstreetmap_sources.json  toronto_lockers_sources.json
Display Files/: openstreetmap.geojson  toronto_lockers.geojson
Output Files/: bicycle-parking-bike-stations-indoor-normalized.geojson  bicycle-parking-high-capacity-outdoor-normalized.geojson  bicycle-parking-racks-normalized.geojson  osm_bicycle_parking_city_of_toronto-normalized.geojson
Source Files/: bicycle-parking-bike-stations-indoor.geojson  bicycle-parking-high-capacity-outdoor.geojson  bicycle-parking-racks.geojson  osm_bicycle_parking_city_of_toronto.geojson
demo_app/: index.css  index.html  index.js
demo_app/CurrentMap/: index.html
high_capacity_pk_update/: README.md  high_capacity_pk_update.py
(+204 files in other folders)
