[project]
name = "new-parking-map"
version = "0.1.0"
description = "New BikeSpace Toronto Bicycle Parking Map Data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "geojson>=3.2.0",
    "geopandas>=1.0.1",
    "numpy>=2.2.4",
    "overpass>=0.7.2",
    "pandas>=2.2.3",
    "pandera>=0.23.1",
    "pathlib>=1.0.1",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "shapely>=2.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
